@@ -4,6 +4,9 @@
             - `ask` modified to handle EINTR
             - New function `output` created as wrapper.
             - Added 'str' as paramtype to `convert_param`
+        * anonymine_engine.py (game_engine.init_field2):
+            - Handle EINTR on os.wait, os.fork already does this
+              unintentionally.
 
 2016-07-16      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.2.16
